--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/Joseminosa/lighthouse.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "",☺
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Joseminosa/lighthouse/issues"
